--- a/css/paragraphs.css
+++ b/css/paragraphs.css
@@ -18,10 +18,9 @@
 
 .intro__description {
     font-family: "Fira mono", sans-serif;
-    font-size: 1.5rem;
-    max-width: 45rem;
-    font-size: 2rem;
-    padding-top: 2rem ;
+    font-size: 2rem;  
+    max-width: 45rem;  
+    padding-top: 2rem;
 }
 
 @media (min-width: 768px) {
