--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Itim&family=Oswald:wght@200..700&family=Playwrite+GB+S:wght@250&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Fira+Mono:wght@400;500;700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Itim&family=Oswald:wght@200..700&family=Playwrite+GB+S:wght@250&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html {
@@ -6,43 +7,42 @@ html {
 }
 
 body {
-    font-family: 'Fira mono', sans-serif;
-    background-color: (hsla(0, 0%, 100%, 1));
-    color: (hsla(223, 28%, 15%, 1));
-}
-
-
-@media (min-width: 768px) {
-
-.albums__content {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
+    font-family: 'Fira Mono', sans-serif;
+    background-color: hsla(0, 0%, 100%, 1);
+    color: hsla(223, 28%, 15%, 1);
 }
 
 @media (min-width: 768px) {
+    .albums__content {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 
     .intro {
         display: flex;
         justify-content: space-between;
     }
+
+    .intro__content {
+        padding: 2rem;
+    }
+
+    .intro__content p {
+        min-width: 57rem;
+    }
+
+    .intro__shape {
+        padding-top: 5rem;
+        display: block;
+    }
 }
-
-
-/* intro page  */
 
 .intro__content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 2rem;
-}
-
-@media (min-width: 768px) {
-    .intro__content {
-        padding: 2rem;
-    }
 }
 
 .intro__content h1 {
@@ -57,13 +57,6 @@ body {
     max-width: 35rem;
 }
 
-@media (min-width: 768px) {
-
-.intro__content p {
-        min-width: 57rem;
-    }
-}
-
 .intro__buttons {
     display: flex;
     border-radius: 1rem;
@@ -73,7 +66,7 @@ body {
     max-width: 13rem;
     min-height: 5rem;
     background-color: hsla(223, 100%, 84%, 1);
-    font-family: 'Fira sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     font-size: 2rem;
     font-weight: 400;
 }
@@ -86,43 +79,32 @@ body {
 .intro__buttons img {
     margin-left: 1rem;
 }
+
 .intro__shape {
     display: none;
 }
 
-@media (min-width: 768px) {
-
-    .intro__shape {
-        padding-top: 5rem;
-        display: block;
-    }
-}
-
-
-/* navgation links*/
-
+/* Navigation Links */
 .navigation__links {
     width: 100%;
     border-top: hsl(231, 53%, 76%) 1px solid;
     display: flex;    
     justify-content: center;
     align-items: center;
-    
 }
-
 
 .navigation__link {
     margin-top: 2rem;
     text-decoration: none;
     font-size: 2.5rem;
-    font-family: 'Fira sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
     padding: 1rem;
     display: flex;
     margin: 3rem 2rem;
     color: black;
     background-color: hsla(222, 100%, 84%, 0.749);
-    border-radius:5px;
+    border-radius: 5px;
 }
 
 .navigation__link img {
@@ -130,9 +112,9 @@ body {
 }
 
 .arrow_right {
-    padding-left:1rem;
+    padding-left: 1rem;
 }
 
 .arrow_left {
-    padding-right:1rem;
+    padding-right: 1rem;
 }
